dashboard/dashboard.css
/* Colour Scheme: https://colorhunt.co/palette/27374d526d829db2bfdde6ed */
* {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    h1 {
        border: 1px solid orange;
    }

    #main-heading {
        width: 90%;
        margin-bottom: 10px;
        text-align: center;
    }

    #input-div {
        width: 90%;
        margin-left: 5%;
        margin-right: 5%;
    }

    #main-forecast-div, #map-div, #hourly-forecast-div, #weekly-forecast-div {
        width: 90%;
    }

    #main-forecast-div, #hourly-forecast-div {
        margin-bottom: 35px;
    }

}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    h1 {
        border: 1px solid purple;
    }

    #main-heading {
        width: 90%;
        margin-bottom: 10px;
        text-align: center;
    }
    
    #input-div {
        width: 70%;
        margin-left: 15%;
        margin-right: 15%;
    }

    #main-forecast-div, #map-div {
        width: 43%;
    }

    #hourly-forecast-div, #weekly-forecast-div {
        width: 90%;
        margin-bottom: 40px;
    }

} 

/* Medium devices (landscape tablets, 768px and up) */
@media screen and (min-width: 768px) {
    h1 {
        border: 1px solid green;
    }

    #input-div {
        width: 45%;
        margin-left: 25px;
    }

    #main-forecast-div, #map-div {
        width: 45%;
    }

    #hourly-forecast-div, #weekly-forecast-div {
        width: 93%;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media screen and (min-width: 992px) {
    h1 {
        border: 1px solid blue;
    }

    #input-div {
        width: 50%;
    }

    #input-div input {
        width: 70%;
    }

    #main-forecast-div {
        width: 60%;
    }

    #map-div {
        width: 35%;
    }

    #hourly-forecast-div, #weekly-forecast-div {
        width: 47%;
    }
}


/* Extra large devices (large laptops and desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
    h1 {
        border: 1px solid red;
    }

    #input-div {
        width: 50%;

    }

    #input-div input {
        width: 60%;
    }

    #main-forecast-div {
        width: 55%;
    }

    #map-div {
        width: 41%;
    }

    #hourly-forecast-div, #weekly-forecast-div {
        width: 48%;
    }
}

body {
    background-color: #27374D !important;
}

#top-section {
    margin-top: 20px;
    margin-bottom: 30px;
}

#main-heading {
    margin-left: 25px;
    color: #DDE6ED;
}

h2 {
    color: black !important;
}

#input-div {
    margin-bottom: 20px;
}

#input-div button {
    margin-left: 10px;
}

#location-form {
    display: flex;
    align-items: center;
}

datalist {
    border: 2px solid black;
    border-radius: 0 0 10px 10px;
}

datalist option {
    background-color: red;
}

#main-forecast-div {
    display: inline-block;
    height: 400px;
    text-align: center;
    vertical-align: top;
    background-color: #526D82;
    border-radius: 15px;
    margin-left: 20px;
}

#main-forecast-div #forecast-location {
    margin-top: 60px;
}

.main-forecast {
    margin-bottom: 20px;
}

#map-div {
    display: inline-block;
    height: 400px;
    margin-left: 20px;
    border-radius: 15px;
}

#bottom-section {
    margin-top: 20px;
}

#bottom-section h2 {
    margin-top: 20px;
    margin-bottom: 40px;
}

#hourly-forecast-div {
    display: inline-block;
    height: 350px;
    text-align: center;
    background-color: #526D82;
    margin-left: 20px;
    border-radius: 15px;
}

#hourly-div, #weekly-div {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 95%;
    overflow-x: scroll;
    margin-top: -100px
}

#hourly-div div , #weekly-div div {
    background-color: #9DB2BF;
    border: 2px solid black;
    border-radius: 15px;
    padding: 8px 8px 0 8px;
    margin-left: 5px;
    margin-top: 20px;
    box-shadow: 2px 2px #27374D;
}

#hourly-div div {
    width:30%;
}

#hourly-div img, #weekly-div img {
    margin-bottom: 10px;
}

#hourly-forecast-div, #weekly-forecast-div {
    padding: 20px;
}

#weekly-forecast-div {
    display: inline-block;
    height: 355px;
    margin-left: 20px;
    text-align: center;
    background-color: #526D82;
    border-radius: 15px;
}

